# oracle

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
alembic/versions/: f868236065df_init.py
backend/: .dockerignore  Dockerfile  api-server.py  enrichment-server.py  entrypoint.sh  mcp-server.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ef7cb9c165fb_init.py
backend/src/api/: app.py  dependencies.py
backend/src/api/routers/: source.py
backend/src/config/: __init__.py
backend/src/cron/: __init__.py
backend/src/db/: crud.py  models.py  schemas.py  utils.py
backend/src/enrichment/: app.py
backend/src/enrichment/jobs/: __init__.py  ics_sans_edu_scraper.py
backend/src/mcp/: __init__.py
backend/src/utils/: embeddings.py  metrics.py
config/alloy/: config.alloy
config/nginx/: nginx.conf
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: Navbar.tsx  SourcePreview.tsx  SourcesGrid.tsx  SourcesList.tsx  SourcesView.tsx
frontend/src/app/tools/: env.ts  faro.ts
sql/init/: init_oracle_db.sql
src/api/routers/: __init__.py
src/config/: __init__.py
src/db/: crud.py  database.py  models.py  schemas.py
src/enrichment/jobs/: ics_sans_edu_scraper.py
src/utils/: __init__.py  embeddings.py  trace.py
